# testMingWWorkflow

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FindFilesystem.cmake  Makefile  cmake_install.cmake  main.cpp  untitled3.cbp
.github/workflows/: build.yml
